--- a/Language Pad/Dialogs/dlgAbout.resx
+++ b/Language Pad/Dialogs/dlgAbout.resx
@@ -130,7 +130,18 @@ Redistribution and use in source and binary forms, with or without modification,
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</value>
   </data>
   <data name="TextBox2.Text" xml:space="preserve">
-    <value>Version 7.0 (September 7, 2015)
+    <value>Version 8.0 (September 11, 2017)
+   •Support for 4k screens
+   •Support for themes - Ice(Default), Night, Luna, Olive
+   •Import dictionaries from CSV
+   •Page count next to word and character count   
+   •About dialog revised
+   •Fixed bug where decimal separators  other than "." would throw errors
+   •Fixed bug where clipboard content would insert itself when changing font style
+   •Replaced tabbed interface with toolbar and menu interface 
+   •Removed old bloat features like clip art, webcam insert, and the emotes panel
+   •Replaced stylized buttons with native buttons
+Version 7.0 (September 7, 2015)
    •Custom font in dictionary
    •Alignment now works on styles
    •Symbol buttons now use Calibri
