--- a/Language Pad/ssLoading.resx
+++ b/Language Pad/ssLoading.resx
@@ -120,27 +120,32 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pbLoading.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAiMAAAANCAYAAAB7E27eAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAABjSURBVHhe7daxDYAwEARBFwKx26D/qgBniNybzEvzuhJ2
-        PHcBAETmY40DACDwiZETAGAjMQIApMQIAJASIwBASowAACkxAgCkxAgAkBIjAEBKjAAAqV+MAADstmLk
-        fQAAgTFvmAyDYtH6LSMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAiMAAAAhCAYAAAALfauTAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAGeSURBVHhe7dbXahZQEIXRPITYe++998QSk6iIoqKIoiKK
+        or7/nXuG31eY3KwD68DsJ/iW8pYBADbJhVhaiS0AAJugY+RhbI1tAACDqj86Rh7H9tgBADCo+qNjZDV2
+        xi4AgEHVHx0ja7E79gAADKr+6BhZXwx7AQAGVX90jGzEvtgPADCo+qNj5FkciIMAAIOqPzpGnsehOAwA
+        MKj6o2PkRRyJowAAg6o/OkZexrE4DgAwqPqjY+RVnIiTAACDqj86Rl7HqTgNADCo+qNj5M1iOAMAMKj6
+        o2PkbZyNcwAAg6o/OkbexfnFAQAw5X9/LL2Pi3EJAGBQ9UfHyIe4HFcAAAZVf3SMfIyrcQ0AYFD1R8fI
+        p7geNwAABlV/dIx8jptxCwBgUPVHx8iXxXAbAGBQ9UfHyNe4E3cBAAZVf3SMfIt7cR8AYFD1R8fI91iO
+        FQCAQdUfHSM/4kE8BAAYVP3RMfIzHsVjAIBB1R8dI79iNZ4AAAyq/ugY+R1rsQ4AMKj6o2Pkz2LYAAAY
+        VP3RMfI3ngIAbIKOkfoAADbB0oV/Mr+vGthe8jsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pbLoading.Style" xml:space="preserve">
     <value>Radius=0
 Padding=0
 
-Background Colors=30,0,0,0|30,0,0,0
+Background Colors=20,0,0,0|80,0,0,0
 Background Positions=0|1
 Background Angle=90
-Background Border Color=40,0,0,0
+Background Border Color=50,0,0,0
 Background Highlight Color=0,255,255,255
 
-Progress Colors=#cf6c36|#b21e54
+Progress Colors=190,255,255,255|230,255,255,255
 Progress Positions=0|1
-Progress Angle=0
+Progress Angle=-90
 Progress Border Color=0,0,0,0
-Progress Highlight Color=40,255,255,255
+Progress Highlight Color=200,255,255,255
 
 No AA=1</value>
   </data>
